# bc-ur-cpp

./: CMakeLists.txt  README.md
src/: bc32.cpp  bc32.h  ur.cpp  ur.h  utils.cpp  utils.h
tests/: CMakeLists.txt
tests/src/: bc32_test.cpp  ur_test.cpp
